Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41898

[REG: 5.3.1 -> 5.3.2] QGLWidget and QMenu in dock causes transient parent to not be set

XMLWordPrintable

    • 6c7a348cf82665f7f09bc3e0cfe03256f1462744 (qtbase/5.4, 21.10.2014, 5.4)

      In such case, a warning is printed:

      void QWindow::setTransientParent(QWindow*) QWidgetWindow(0xaa40a0) must be a top level window.
      

      This is not printed if there is no parent for QMenu

        1. qtbug41898.tar.gz
          0.6 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-41898
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes